--- a/keola.html
+++ b/keola.html
@@ -17,7 +17,7 @@
             background: var(--bg-input);
         }
         .content::-webkit-scrollbar { width: 4px; }
-        .content::-webkit-scrollbar-thumb { background: rgba(0,144,152,0.25); border-radius: 2px; }
+        .content::-webkit-scrollbar-thumb { background: rgba(0, 144, 152, 0.25); border-radius: 2px; }
 
         .card {
             background: var(--bg-card);
@@ -29,7 +29,7 @@
             animation: fadeUp 0.4s ease both;
         }
         .card--especial {
-            background: linear-gradient(135deg, var(--primary-faint), rgba(0,144,152,0.02));
+            background: linear-gradient(135deg, var(--primary-faint), rgba(0, 144, 152, 0.02));
             border-color: var(--border-strong);
         }
 
@@ -47,12 +47,13 @@
             align-items: center;
             justify-content: space-between;
             padding: 11px 0;
-            border-bottom: 1px solid rgba(0,144,152,0.08);
+            border-bottom: 1px solid rgba(0, 144, 152, 0.08);
         }
         .menu-row:last-child { border-bottom: none; }
 
         .menu-name { font-size: 14px; color: var(--text-main); font-weight: 400; }
         .menu-desc { font-size: 12px; color: var(--text-faint); margin-top: 2px; }
+
         .menu-price {
             font-family: var(--font-title);
             font-size: 15px;
@@ -62,23 +63,86 @@
             margin-left: 12px;
         }
 
-        .d1{animation-delay:0.05s}.d2{animation-delay:0.10s}
-        .d3{animation-delay:0.15s}.d4{animation-delay:0.20s}
-        .d5{animation-delay:0.25s}.d6{animation-delay:0.30s}
+        /* Nav sobre o banner */
+        .banner-nav {
+            position: absolute;
+            bottom: 10px;
+            left: 0;
+            right: 0;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 16px;
+        }
+        .back-btn {
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            background: rgba(255, 255, 255, 0.92);
+            border: 1px solid var(--border);
+            border-radius: var(--radius-full);
+            padding: 5px 14px;
+            font-family: var(--font-title);
+            font-size: 10px;
+            letter-spacing: 1.5px;
+            color: var(--primary-dark);
+            text-decoration: none;
+            backdrop-filter: blur(8px);
+            box-shadow: var(--shadow-sm);
+            transition: all 0.2s;
+        }
+        .back-btn:hover { background: #fff; border-color: var(--primary-light); }
+
+        .page-badge {
+            font-family: var(--font-title);
+            font-size: 10px;
+            letter-spacing: 2px;
+            color: var(--primary);
+            text-transform: uppercase;
+            background: rgba(255, 255, 255, 0.92);
+            border: 1px solid var(--border);
+            border-radius: var(--radius-full);
+            padding: 5px 14px;
+            backdrop-filter: blur(8px);
+        }
+
+        .banner-overlay {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 60px;
+            background: linear-gradient(to top, rgba(255, 255, 255, 0.95), transparent);
+        }
+
+        /* Altura do banner nesta página */
+        .banner img { height: 120px; }
+        .banner-fallback { height: 120px !important; }
+
+        .d1{animation-delay:0.05s} .d2{animation-delay:0.10s}
+        .d3{animation-delay:0.15s} .d4{animation-delay:0.20s}
+        .d5{animation-delay:0.25s} .d6{animation-delay:0.30s}
     </style>
 </head>
 <body>
 <div class="page-wrapper">
+
     <div class="banner">
-        <img src="banner zion.jpg" alt="Zion Lisboa" onerror="this.style.display='none'; document.querySelector('.banner-fallback').classList.add('show');">
-        <div class="banner-fallback"><div class="banner-title">ZION</div><div class="banner-sub">Lisboa · Portugal</div></div>
+        <img src="banner zion.jpg" alt="Zion Lisboa"
+             onerror="this.style.display='none'; document.querySelector('.banner-fallback').classList.add('show');">
+        <div class="banner-fallback">
+            <div class="banner-title">ZION</div>
+            <div class="banner-sub">Lisboa · Portugal</div>
+        </div>
         <div class="banner-overlay"></div>
         <div class="banner-nav">
             <a href="index.html" class="back-btn">← Início</a>
             <span class="page-badge">Keola</span>
         </div>
     </div>
+
     <div class="gold-line"></div>
+
     <div class="content">
         <div id="especial-section"></div>
         <div id="menu-section">
@@ -87,56 +151,95 @@
             </div>
         </div>
     </div>
+
     <div class="footer">
         <div class="footer-links">
-            <a class="footer-link" href="https://zionchurch.org.br/" target="_blank"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="2" y1="12" x2="22" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg>Site Oficial</a>
-            <a class="footer-link" href="https://www.instagram.com/zionlisboa/?hl=en" target="_blank"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg>@ZionLisboa</a>
+            <a class="footer-link" href="https://zionchurch.org.br/" target="_blank">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="12" height="12"><circle cx="12" cy="12" r="10"/><line x1="2" y1="12" x2="22" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg>
+                Site Oficial
+            </a>
+            <a class="footer-link" href="https://www.instagram.com/zionlisboa/?hl=en" target="_blank">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="12" height="12"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg>
+                @ZionLisboa
+            </a>
         </div>
-        <div class="footer-divider"></div>
-        <div class="footer-bottom">
-            <div class="footer-copy">© 2026 Zion Lisboa — Todos os direitos reservados</div>
-            <div class="footer-address">Rua do Centro Cultural, 11 · 1700-036 Alvalade · Lisboa, Portugal</div>
-        </div>
+        <div class="footer-div"></div>
+        <div class="footer-copy">© 2026 Zion Lisboa — Todos os direitos reservados</div>
+        <div class="footer-addr">Rua do Centro Cultural, 11 · 1700-036 Alvalade · Lisboa, Portugal</div>
     </div>
 </div>
+
 <script>
-    const CATS={almoco:{l:'🍽️ Almoço',o:1},bebidas:{l:'☕ Bebidas',o:2},sumos:{l:'🧃 Sumos',o:3},snacks:{l:'🥪 Snacks',o:4},sobremesas:{l:'🍰 Sobremesas',o:5},outro:{l:'🛒 Outros',o:6}};
-    const FALLBACK=[
-        {categoria:'almoco',nome:'Prato do Dia',descricao:'Bitoque',preco:8.00,disponivel:true,especial_hoje:true},
-        {categoria:'almoco',nome:'Hambúrguer',descricao:'Kit menu com batatas',preco:11.00,disponivel:true,especial_hoje:false},
-        {categoria:'bebidas',nome:'Café Expresso',descricao:null,preco:2.50,disponivel:true,especial_hoje:false},
-        {categoria:'bebidas',nome:'Café com Leite',descricao:null,preco:2.00,disponivel:true,especial_hoje:false},
-        {categoria:'bebidas',nome:'Coca Cola',descricao:null,preco:4.00,disponivel:true,especial_hoje:false},
-        {categoria:'snacks',nome:'Bolo de Chocolate',descricao:null,preco:2.50,disponivel:true,especial_hoje:false},
+    const CATS = {
+        almoco:     { l: '🍽️ Almoço',    o: 1 },
+        bebidas:    { l: '☕ Bebidas',    o: 2 },
+        sumos:      { l: '🧃 Sumos',      o: 3 },
+        snacks:     { l: '🥪 Snacks',     o: 4 },
+        sobremesas: { l: '🍰 Sobremesas', o: 5 },
+        outro:      { l: '🛒 Outros',     o: 6 },
+    };
+
+    const FALLBACK = [
+        { categoria:'almoco',  nome:'Prato do Dia',    descricao:'Bitoque',              preco:8.00,  disponivel:true, especial_hoje:true  },
+        { categoria:'almoco',  nome:'Hambúrguer',      descricao:'Kit menu com batatas', preco:11.00, disponivel:true, especial_hoje:false },
+        { categoria:'bebidas', nome:'Café Expresso',   descricao:null,                   preco:2.50,  disponivel:true, especial_hoje:false },
+        { categoria:'bebidas', nome:'Café com Leite',  descricao:null,                   preco:2.00,  disponivel:true, especial_hoje:false },
+        { categoria:'bebidas', nome:'Coca Cola',       descricao:null,                   preco:4.00,  disponivel:true, especial_hoje:false },
+        { categoria:'snacks',  nome:'Bolo de Chocolate', descricao:null,                 preco:2.50,  disponivel:true, especial_hoje:false },
     ];
-    async function load(){
-        try{const r=await fetch('/api/keola');if(!r.ok)throw 0;render(await r.json());}
-        catch{render(FALLBACK);}
+
+    async function load() {
+        try {
+            const r = await fetch('/api/keola');
+            if (!r.ok) throw 0;
+            render(await r.json());
+        } catch {
+            render(FALLBACK);
+        }
     }
-    function p(v){return Number(v).toFixed(2)+'€';}
-    function render(items){
-        const esp=items.find(i=>i.especial_hoje&&i.disponivel);
-        document.getElementById('especial-section').innerHTML=esp?`
-    <p class="section-label">⭐ Especial do Dia</p>
-    <div class="card card--especial d1">
-      <div class="menu-row">
-        <div><div class="menu-name">${esp.nome}</div>${esp.descricao?`<div class="menu-desc">${esp.descricao}</div>`:''}</div>
-        <div class="menu-price">${p(esp.preco)}</div>
-      </div>
-    </div>`:'';
-        const byCat={};
-        items.forEach(i=>{const c=i.categoria||'outro';if(!byCat[c])byCat[c]=[];byCat[c].push(i);});
-        const sorted=Object.entries(byCat).sort(([a],[b])=>(CATS[a]?.o||99)-(CATS[b]?.o||99));
-        let d=2;
-        document.getElementById('menu-section').innerHTML=sorted.map(([cat,its])=>`
-    <p class="section-label">${CATS[cat]?.l||cat}</p>
-    <div class="card d${Math.min(d++,6)}">
-      ${its.map(i=>`<div class="menu-row">
-        <div><div class="menu-name">${i.nome}${!i.disponivel?' <small style="color:var(--text-faint)">(esgotado)</small>':''}</div>${i.descricao?`<div class="menu-desc">${i.descricao}</div>`:''}</div>
-        <div class="menu-price">${p(i.preco)}</div>
-      </div>`).join('')}
-    </div>`).join('');
+
+    function p(v) { return Number(v).toFixed(2) + '€'; }
+
+    function render(items) {
+        // Especial do dia
+        const esp = items.find(i => i.especial_hoje && i.disponivel);
+        document.getElementById('especial-section').innerHTML = esp ? `
+            <p class="section-label">⭐ Especial do Dia</p>
+            <div class="card card--especial d1">
+                <div class="menu-row">
+                    <div>
+                        <div class="menu-name">${esp.nome}</div>
+                        ${esp.descricao ? `<div class="menu-desc">${esp.descricao}</div>` : ''}
+                    </div>
+                    <div class="menu-price">${p(esp.preco)}</div>
+                </div>
+            </div>` : '';
+
+        // Menu por categoria
+        const byCat = {};
+        items.forEach(i => {
+            const c = i.categoria || 'outro';
+            if (!byCat[c]) byCat[c] = [];
+            byCat[c].push(i);
+        });
+
+        const sorted = Object.entries(byCat).sort(([a],[b]) => (CATS[a]?.o || 99) - (CATS[b]?.o || 99));
+        let d = 2;
+
+        document.getElementById('menu-section').innerHTML = sorted.map(([cat, its]) => `
+            <p class="section-label">${CATS[cat]?.l || cat}</p>
+            <div class="card d${Math.min(d++, 6)}">
+                ${its.map(i => `
+                <div class="menu-row">
+                    <div>
+                        <div class="menu-name">${i.nome}${!i.disponivel ? ' <small style="color:var(--text-faint)">(esgotado)</small>' : ''}</div>
+                        ${i.descricao ? `<div class="menu-desc">${i.descricao}</div>` : ''}
+                    </div>
+                    <div class="menu-price">${p(i.preco)}</div>
+                </div>`).join('')}
+            </div>`).join('');
     }
+
     load();
 </script>
 </body>
