--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
 <body>
 <div class="page-wrapper">
     <div class="banner">
-        <img src="banner_zion.jpg" alt="Zion Lisboa" onerror="this.onerror=null;this.style.display='none';document.querySelector('.banner-fallback').classList.add('show');">
+        <img src="banner zion.jpg" alt="Zion Lisboa" onerror="this.onerror=null;this.style.display='none';document.querySelector('.banner-fallback').classList.add('show');">
         <div class="banner-fallback"><div class="banner-title">ZION</div><div class="banner-sub">Lisboa · Portugal</div></div>
 
     </div>
