--- a/admin.html
+++ b/admin.html
@@ -10,18 +10,14 @@
     <link rel="stylesheet" href="css/components.css">
     <script src="config.js"></script>
     <script src="auth.js"></script>
-    
+
 </head>
 <body>
 <div class="page-wrapper">
     <div class="banner">
-        <img src="banner zion.jpg" alt="Zion Lisboa" onerror="this.style.display='none';document.querySelector('.banner-fallback').classList.add('show');">
+        <img src="banner%20zion.jpg" alt="Zion Lisboa" onerror="this.onerror=null;this.style.display='none';document.querySelector('.banner-fallback').classList.add('show');">        
         <div class="banner-fallback"><div class="banner-title">ZION</div><div class="banner-sub">Lisboa · Portugal</div></div>
-        <div class="banner-overlay"></div>
-        <div class="banner-nav">
-            <a href="index.html" class="back-btn">← Inicio</a>
-            <span class="page-badge">Admin</span>
-        </div>
+        
     </div>
     <div class="gold-line"></div>
     <div class="user-bar">
