--- a/links.html
+++ b/links.html
@@ -9,13 +9,119 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/components.css">
     <script src="config.js"></script>
+    <script src="auth.js"></script>
+    <style>
+        :root{
+            --gold:#B8922A;--gold-light:#D4A843;--gold-dark:#8B6914;
+            --border:rgba(184,146,42,0.22);--bg-page:#F5EFE4;--bg-card:#FFFFFF;
+            --bg-input:#FAF7F2;--bg-footer:#F0E8D8;--text-main:#1A1410;
+            --text-muted:#7A6A52;--text-faint:#A89878;
+            --shadow:0 8px 40px rgba(100,70,20,0.13);
+            --green:#25D366;--green-dark:#128C7E;
+        }
+        *,*::before,*::after{box-sizing:border-box;margin:0;padding:0;-webkit-tap-highlight-color:transparent}
+        html,body{height:100%;background:var(--bg-page);font-family:'Lato',sans-serif;display:flex;flex-direction:column;align-items:center;justify-content:center;min-height:100vh}
+        body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellipse at 15% 15%,rgba(201,168,76,0.09) 0%,transparent 55%),radial-gradient(ellipse at 85% 85%,rgba(201,168,76,0.06) 0%,transparent 55%);pointer-events:none}
+        .page-wrapper{position:relative;z-index:1;display:flex;flex-direction:column;width:640px;max-width:96vw;height:96vh;max-height:900px;background:var(--bg-card);border-radius:16px;box-shadow:var(--shadow),0 0 0 1px var(--border);overflow:hidden}
+
+        /* Banner */
+        .banner{width:100%;position:relative;background:#111;flex-shrink:0}
+        .banner img{width:100%;height:110px;object-fit:cover;display:block}
+        .banner-fallback{display:none;width:100%;height:110px;background:linear-gradient(135deg,#0d0d0d 0%,#1c1408 50%,#0d0d0d 100%);align-items:center;justify-content:center;flex-direction:column;gap:8px}
+        .banner-fallback.show{display:flex}
+        .banner-title{font-family:'Cinzel',serif;color:#C9A84C;font-size:26px;font-weight:700;letter-spacing:10px}
+        .banner-sub{color:rgba(201,168,76,0.6);font-size:10px;letter-spacing:4px;text-transform:uppercase}
+        .banner-overlay{position:absolute;bottom:0;left:0;right:0;height:55px;background:linear-gradient(to top,rgba(255,255,255,0.97),transparent)}
+        .banner-nav{position:absolute;bottom:10px;left:0;right:0;display:flex;align-items:center;justify-content:space-between;padding:0 16px}
+        .back-btn{display:flex;align-items:center;gap:6px;background:rgba(255,255,255,0.92);border:1px solid var(--border);border-radius:20px;padding:5px 14px;font-family:'Cinzel',serif;font-size:10px;letter-spacing:1.5px;color:var(--gold-dark);text-decoration:none;backdrop-filter:blur(8px)}
+        .page-badge{font-family:'Cinzel',serif;font-size:10px;letter-spacing:2px;color:var(--gold);text-transform:uppercase;background:rgba(255,255,255,0.92);border:1px solid var(--border);border-radius:20px;padding:5px 14px;backdrop-filter:blur(8px)}
+        .gold-line{height:2px;background:linear-gradient(90deg,transparent,var(--gold-light),transparent);flex-shrink:0;opacity:0.5}
+
+        /* Search & filter bar */
+        .search-bar{display:flex;align-items:center;gap:8px;padding:10px 16px;border-bottom:1px solid var(--border);background:var(--bg-card);flex-shrink:0}
+        .search-input{flex:1;background:var(--bg-input);border:1px solid var(--border);border-radius:20px;padding:8px 14px;font-family:'Lato',sans-serif;font-size:13px;color:var(--text-main);outline:none;transition:border-color 0.2s}
+        .search-input::placeholder{color:var(--text-faint)}
+        .search-input:focus{border-color:var(--gold-light)}
+
+        /* Filter chips */
+        .filters-row{display:flex;gap:6px;padding:8px 16px;overflow-x:auto;flex-shrink:0;border-bottom:1px solid var(--border);background:var(--bg-card)}
+        .filters-row::-webkit-scrollbar{height:0}
+        .filter-chip{flex-shrink:0;padding:5px 12px;border-radius:20px;border:1px solid var(--border);background:var(--bg-input);font-family:'Cinzel',serif;font-size:9px;letter-spacing:1px;text-transform:uppercase;color:var(--text-muted);cursor:pointer;transition:all 0.2s;white-space:nowrap}
+        .filter-chip:hover{border-color:var(--gold-light)}
+        .filter-chip.active{background:linear-gradient(135deg,var(--gold-dark),var(--gold-light));color:#fff;border-color:transparent;box-shadow:0 2px 8px rgba(139,105,20,0.2)}
+        .filter-chip.all.active{background:linear-gradient(135deg,var(--gold-dark),var(--gold-light))}
+
+        /* Content */
+        .content{flex:1;overflow-y:auto;background:var(--bg-input)}
+        .content::-webkit-scrollbar{width:4px}
+        .content::-webkit-scrollbar-thumb{background:rgba(184,146,42,0.25);border-radius:2px}
+
+        /* Stats */
+        .stats-bar{display:flex;gap:8px;padding:12px 16px 4px}
+        .stat-pill{flex:1;background:var(--bg-card);border:1px solid var(--border);border-radius:10px;padding:9px;text-align:center}
+        .stat-num{font-family:'Cinzel',serif;font-size:18px;font-weight:700;color:var(--gold-dark)}
+        .stat-label{font-size:10px;color:var(--text-faint);margin-top:1px}
+
+        /* Section group header */
+        .group-header{font-family:'Cinzel',serif;font-size:10px;letter-spacing:3px;text-transform:uppercase;color:var(--text-faint);padding:12px 16px 6px;display:flex;align-items:center;gap:8px}
+        .group-header-count{font-size:9px;background:rgba(184,146,42,0.12);color:var(--gold-dark);padding:1px 7px;border-radius:10px;letter-spacing:1px}
+
+        /* Link row — uma linha por link */
+        .links-list{display:flex;flex-direction:column;gap:0;padding:0 16px 16px}
+        .link-row{display:flex;align-items:center;gap:12px;background:var(--bg-card);border:1px solid var(--border);border-radius:12px;padding:11px 14px;transition:all 0.2s;animation:fadeUp 0.3s ease both;margin-bottom:6px}
+        .link-row:hover{box-shadow:0 3px 14px rgba(100,70,20,0.1);border-color:var(--gold-light)}
+
+        /* Ícone tipo */
+        .link-type-icon{width:40px;height:40px;border-radius:10px;background:linear-gradient(135deg,rgba(201,168,76,0.15),rgba(201,168,76,0.05));border:1px solid rgba(184,146,42,0.2);display:flex;align-items:center;justify-content:center;font-size:18px;flex-shrink:0}
+
+        /* Info do link */
+        .link-info{flex:1;min-width:0}
+        .link-nome{font-family:'Cinzel',serif;font-size:12px;font-weight:600;color:var(--gold-dark);margin-bottom:3px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+        .link-meta{display:flex;flex-wrap:wrap;gap:6px;align-items:center}
+        .link-meta-item{display:flex;align-items:center;gap:3px;font-size:11px;color:var(--text-muted)}
+        .link-meta-item svg{width:11px;height:11px;color:var(--text-faint);flex-shrink:0}
+        .link-lider{font-size:11px;color:var(--text-faint);margin-top:2px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+        .link-zona-badge{font-family:'Cinzel',serif;font-size:8px;letter-spacing:1px;padding:2px 7px;border-radius:8px;background:rgba(184,146,42,0.1);color:var(--gold-dark);border:1px solid rgba(184,146,42,0.15);white-space:nowrap;flex-shrink:0}
+        .link-dia-badge{font-family:'Cinzel',serif;font-size:8px;letter-spacing:0.5px;padding:2px 7px;border-radius:8px;background:rgba(100,130,200,0.1);color:#1565c0;border:1px solid rgba(100,130,200,0.2);white-space:nowrap;flex-shrink:0}
+
+        /* Botão WhatsApp */
+        .wap-btn{display:flex;align-items:center;justify-content:center;gap:5px;padding:8px 12px;border-radius:10px;border:none;background:linear-gradient(135deg,var(--green-dark),var(--green));color:#fff;font-family:'Cinzel',serif;font-size:9px;letter-spacing:1px;text-transform:uppercase;cursor:pointer;transition:all 0.2s;flex-shrink:0;text-decoration:none;box-shadow:0 2px 8px rgba(37,211,102,0.25)}
+        .wap-btn:hover{filter:brightness(1.08);transform:translateY(-1px)}
+        .wap-btn svg{width:14px;height:14px;flex-shrink:0}
+
+        /* Online badge */
+        .online-badge{font-size:9px;padding:1px 6px;border-radius:6px;background:rgba(46,125,50,0.1);color:#2e7d32;border:1px solid rgba(46,125,50,0.2);font-family:'Cinzel',serif;letter-spacing:0.5px}
+
+        /* Empty / Loading */
+        .empty{text-align:center;padding:48px 20px;color:var(--text-faint)}
+        .empty-icon{font-size:44px;margin-bottom:10px;opacity:0.35}
+        .empty-txt{font-size:13px}
+        .loading{text-align:center;padding:48px;color:var(--text-faint);font-size:13px}
+        .spin{width:26px;height:26px;border:2px solid var(--border);border-top-color:var(--gold);border-radius:50%;animation:spin 0.8s linear infinite;margin:0 auto 10px}
+
+        /* Footer */
+        .footer{background:var(--bg-footer);border-top:1px solid var(--border);padding:10px 18px;flex-shrink:0}
+        .footer-links{display:flex;justify-content:center;gap:12px;margin-bottom:8px}
+        .footer-link{display:flex;align-items:center;gap:5px;color:var(--gold);text-decoration:none;font-size:10px;letter-spacing:1.2px;text-transform:uppercase;font-family:'Cinzel',serif;padding:4px 10px;border-radius:4px;border:1px solid var(--border);background:rgba(255,255,255,0.6)}
+        .footer-link svg{width:12px;height:12px}
+        .footer-div{height:1px;background:var(--border);margin:8px 0}
+        .footer-copy{color:var(--text-muted);font-size:10px;letter-spacing:1px;text-transform:uppercase;font-family:'Cinzel',serif;text-align:center}
+        .footer-addr{color:var(--text-faint);font-size:10px;text-align:center;margin-top:2px}
+
+        @keyframes fadeUp{from{opacity:0;transform:translateY(8px)}to{opacity:1;transform:translateY(0)}}
+        @keyframes spin{to{transform:rotate(360deg)}}
+    </style>
 </head>
 <body>
 <div class="page-wrapper">
     <div class="banner">
         <img src="banner zion.jpg" alt="Zion Lisboa" onerror="this.style.display='none';document.querySelector('.banner-fallback').classList.add('show');">
         <div class="banner-fallback"><div class="banner-title">ZION</div><div class="banner-sub">Lisboa · Portugal</div></div>
-        
+        <div class="banner-overlay"></div>
+        <div class="banner-nav">
+            <a href="index.html" class="back-btn">← Início</a>
+            <span class="page-badge">LINKs</span>
+        </div>
     </div>
     <div class="gold-line"></div>
 
@@ -190,7 +296,7 @@
     </div>`;
 
         if (lista.length === 0) {
-            html += `<div class="empty"><div class="empty-icon"></div><div class="empty-txt">Nenhum LINK encontrado.</div></div>`;
+            html += `<div class="empty"><div class="empty-icon">🔗</div><div class="empty-txt">Nenhum LINK encontrado.</div></div>`;
             document.getElementById('main-content').innerHTML = html;
             return;
         }
